--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -10,6 +10,9 @@
     <Compile Include="Users.fs" />
     <Compile Include="Session.fs" />
     <Compile Include="Datasets.fs" />
+    <Compile Include="Dataset.fs" />
+    <Compile Include="ResourceTypes.fs" />
+    <Compile Include="TaskTypes.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
