--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -13,6 +13,8 @@
     <Compile Include="Dataset.fs" />
     <Compile Include="ResourceTypes.fs" />
     <Compile Include="TaskTypes.fs" />
+    <Compile Include="Labels.fs" />
+    <Compile Include="Tasks.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
