--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -14,6 +14,7 @@
     <Compile Include="TaskTypes.fs" />
     <Compile Include="Labels.fs" />
     <Compile Include="Tasks.fs" />
+    <Compile Include="Summary.fs" />
     <Compile Include="Server.fs" />
   </ItemGroup>
   <Import Project="..\..\.paket\Paket.Restore.targets" />
