--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -13,6 +13,7 @@
     <Compile Include="Datasets.fs" />
     <Compile Include="DatasetCreate.fs" />
     <Compile Include="DatasetDetails.fs" />
+    <Compile Include="DatasetSlicesCreate.fs" />
     <Compile Include="Tasks.fs" />
     <Compile Include="Labels.fs" />
     <Compile Include="LabelCreate.fs" />
