--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -9,11 +9,11 @@
     <Compile Include="Router.fs" />
     <Compile Include="Sign.fs" />
     <Compile Include="Home.fs" />
-    <Compile Include="TaskCreate.fs" />
     <Compile Include="Datasets.fs" />
     <Compile Include="DatasetCreate.fs" />
     <Compile Include="DatasetDetails.fs" />
-    <Compile Include="DatasetSlicesCreate.fs" />
+    <Compile Include="DatasetSliceCreate.fs" />
+    <Compile Include="DatasetTaskCreate.fs" />
     <Compile Include="Tasks.fs" />
     <Compile Include="Labels.fs" />
     <Compile Include="LabelCreate.fs" />
