--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -12,10 +12,11 @@
     <Compile Include="Session.fs" />
     <Compile Include="ResourceTypes.fs" />
     <Compile Include="Resources.fs" />
-    <Compile Include="DatasetSlices.fs" />
-    <Compile Include="Datasets.fs" />
     <Compile Include="TaskTypes.fs" />
     <Compile Include="Tasks.fs" />
+    <Compile Include="DatasetSlices.fs" />
+    <Compile Include="DatasetTasks.fs" />
+    <Compile Include="Datasets.fs" />
     <Compile Include="Labels.fs" />
     <Compile Include="Summary.fs" />
     <Compile Include="Sign.fs" />
