add task details page and fix some SQL bug

--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -13,8 +13,9 @@
     <Compile Include="DatasetCreate.fs" />
     <Compile Include="DatasetDetails.fs" />
     <Compile Include="DatasetSliceCreate.fs" />
-    <Compile Include="DatasetTaskCreate.fs" />
     <Compile Include="DatasetSliceDetails.fs" />
+    <Compile Include="DatasetTaskCreate.fs" />
+    <Compile Include="DatasetTaskDetails.fs" />
     <Compile Include="Tasks.fs" />
     <Compile Include="Labels.fs" />
     <Compile Include="LabelCreate.fs" />
