--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -12,9 +12,11 @@
     <Compile Include="Session.fs" />
     <Compile Include="ResourceTypes.fs" />
     <Compile Include="Resources.fs" />
+    <Compile Include="ResourceLabels.fs" />
     <Compile Include="TaskTypes.fs" />
     <Compile Include="Tasks.fs" />
     <Compile Include="DatasetSlices.fs" />
+    <Compile Include="TaskResources.fs" />
     <Compile Include="DatasetTasks.fs" />
     <Compile Include="Datasets.fs" />
     <Compile Include="Labels.fs" />
