--- a/src/Client/Client.fsproj
+++ b/src/Client/Client.fsproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="../Shared/Shared.fs" />
+    <Compile Include="Api.fs" />
     <Compile Include="SiteLogo.fs" />
     <Compile Include="Token.fs" />
     <Compile Include="Router.fs" />
